# skunk-works

exp/: .gitignore  dune-project  exp.opam
exp/lib/: dune
exp/test/: dune
jenkins-plugin-host/: .gitignore  pom.xml
jenkins-plugin-host/common-build/: pom.xml
jenkins-plugin-host/example/: pom.xml
jenkins-plugin-host/example/src/main/java/: Action.java  Example.java  HostedEchoStep.java  HostedEchoStepDefinition.java  HostedEchoStepExecution.java
jenkins-plugin-host/example/src/main/java/io/github/garrettswininger/example/: Action.java  Example.java
jenkins-plugin-host/example/src/main/java/io/github/garrettswininger/examplehosted/: Action.java  Example.java  HostedEchoStep.java  HostedEchoStepDefinition.java  HostedEchoStepExecution.java
jenkins-plugin-host/example/src/main/resources/io/github/garrettswininger/examplehosted/Action/: index.jelly
jenkins-plugin-host/host/: pom.xml
jenkins-plugin-host/host/src/main/java/io/github/garrettswininger/plugin-host/: AutoloadRegistry.java  HostedPluginFileSystemWatcher.java  PluginHost.java  Utility.java
jenkins-plugin-host/host/src/main/java/io/github/garrettswininger/pluginhost/: AutoloadRegistry.java  ExtensionAdapter.java  HostedPluginFileSystemWatcher.java  HostedRegistration.java  ManagementLinkAdapter.java  PreparedRegistration.java  RegisteredExtension.java  StepDescriptorAdapter.java  VersionedManagementLink.java
jenkins-plugin-host/host/src/main/resources/: index.jelly
jenkins-plugin-host/hosted-plugin-api/: pom.xml
jenkins-plugin-host/hosted-plugin-api/src/main/java/io/github/garrettswininger/hosting/: DynamicPlugin.java  Extension.java  Hostable.java  Hosted.java  ManagementLinkProxy.java  Proxy.java
jenkins-plugin-host/src/main/java/io/github/garrettswininger/: Utility.java
jenkins-plugin-host/src/main/java/io/github/garrettswininger/plugin-host/: PluginHost.java
keyhole/: .gitignore  CMakeLists.txt  bytecode.cpp  bytecode.h  logging.cpp  logging.h  main.cpp
keyhole/classfile/: .gitignore  CMakeLists.txt  attribute.cpp  attribute.h  classfile.cpp  classfile.h  constant_pool.cpp  constant_pool.h  endian.h  method.cpp  method.h  parsing.cpp  parsing.h  reader.cpp  reader.h  serialization.h  sinks.cpp  sinks.h
keyhole/classfile/tests/: attribute.cpp  classfile.cpp  constant_pool.cpp  helpers.h  method.cpp  parsing.cpp  serialization.cpp
keyhole/cli/: .gitignore  CMakeLists.txt  keyhole-cli-test  main.cpp
keyhole/cli/tests/: test.cpp
rbs/: .gitignore  auth.go  config.go  go.mod  main.go  middleware.go  routes.go
rbs-docs/: README.md
rbs-system/: .gitignore  build.zig  exec.zig  ffi.zig  networking.zig  queue.zig  supervisor.zig  worker.zig
rbs-system/signals/: signals.c  signals.zig
rbs/oidc/: oidc.go  oidc_test.go
rbs/templates/: index.tmpl
